Fix layout spacing

--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -138,7 +138,7 @@ $whiteFilter: invert(100%) sepia(100%) saturate(46%) hue-rotate(89deg)
           max-height: 48px;
           font-size: 1rem;
           padding-block: 1em;
-          padding-inline-start: 4em;
+          padding-inline-start: 3.3em;
 
           cursor: text;
           color: white;
